# sparkno9

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: README.md  secrets.template  styles.css
.github/scripts/: deploy-streamlit.sh  provision-cicd.sql  test-deployment.ps1
.github/workflows/: build_pdf.yml  deploy-streamlit.yml
docs/architecture/: 20251008_data_pipeline_specification.md  initial-design.md  report-creation.md
docs/user-guide/: github_guide.md  snowflake-guide.md  tableau_guide.md
src/project_spark/streamlit/: README.md  __init__.py  constants.py  data_processor.py  environment.yml  snowflake_operations.py  snowpark_connection.py  sql_templates.py  streamlit_app.py  validators.py
src/project_spark/streamlit/.cursor/rules/: repo.mdc  streamlit_in_snowflake.mdc
src/project_spark/streamlit/data/: creation_script.sql
tests/test_streamlit/: test_delta_load_integration.py  test_snowflake_connection.py
